--- a/source/sass/catalog/video/video.scss
+++ b/source/sass/catalog/video/video.scss
@@ -5,6 +5,12 @@
     border: 1px solid #ececec;
     margin-top: 30px;
   }
+  &__container:hover {
+    box-shadow: 10px 10px 20px rgba(4, 6, 6, 0.2);
+  }
+  &__container:active {
+    box-shadow: 10px 10px 20px rgba(4, 6, 6, 0.1);
+  }
   &__name {
     order: -1;
     width: 82px;
