--- a/source/sass/form/ordering-form/ordering-form.scss
+++ b/source/sass/form/ordering-form/ordering-form.scss
@@ -38,6 +38,14 @@
     border-radius: 20px;
     margin-top: -10px;
     background-color: white;
+    transition: 0.3s;
+  }
+  &__radio:hover {
+    box-shadow: 0 0 0 1px #46c1ae;
+  }
+  &__radio:active {
+    box-shadow: 0 0 0 1px #46c1ae;
+    opacity: 30%;
   }
   &__text {
     margin-bottom: 30px;
@@ -72,6 +80,13 @@
     margin-top: -10px;
     background-color: white;
   }
+  &__box:hover {
+    box-shadow: 0 0 0 1px #46c1ae;
+  }
+  &__box:active {
+    box-shadow: 0 0 0 1px #46c1ae;
+    opacity: 30%;
+  }
   &__input-box {
     appearance: none;
     position: absolute;
@@ -101,6 +116,12 @@
     line-height: 18px;
     color: #444444;
   }
+  &__input:hover {
+    border-bottom: 2px solid #46c1ae;
+  }
+  &__input:active::placeholder {
+    opacity: 100%;
+  }
   &__input::placeholder {
     opacity: 30%;
   }
@@ -120,6 +141,36 @@
     right: 45px;
     top: 1700px;
     opacity: 20%;
+  }
+  &__cart-link:hover::before {
+    content: "";
+    width: 25px;
+    height: 24px;
+    position: absolute;
+    background-image: url(./../../../img/icon-phone.svg);
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    right: 45px;
+    top: 1700px;
+    opacity: 20%;
+    filter: invert(82%) sepia(41%) saturate(489%) hue-rotate(109deg)
+      brightness(88%) contrast(84%);
+    transition: 0.3s;
+  }
+  &__cart-link:active::before {
+    content: "";
+    width: 25px;
+    height: 24px;
+    position: absolute;
+    background-image: url(./../../../img/icon-phone.svg);
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    right: 45px;
+    top: 1700px;
+    opacity: 20%;
+    filter: invert(82%) sepia(41%) saturate(489%) hue-rotate(109deg)
+      brightness(88%) contrast(84%);
+    transition: 0.3s;
   }
   &__contacts-container {
     width: 100px;
